Creadas interfaces en las clases Item y equipo. Serviran para permitir acceso a ciertos metodos. Se ha revisado el codigo de otras clases. Se ha añadido un excel con informacion de los objetos y equipamiento.